--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 button {
-    width: 80%;
+    border: none;
     text-decoration: underline;
     font-size: 0.9rem;
     color: white;
